<resources>
    <string name="app_name">Bill Buddies</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_pwd">Forgot password</string>
    <string name="send_otp">SEND OTP</string>
    <string name="email_phone_user">Email/phone/user id</string>
    <string name="otp_verification">Otp Verification</string>
    <string name="please_enter_otp">Please enter otp</string>
    <string name="verify_otp">Verify otp</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="reset_pwd">RESET PASSWORD</string>
    <string name="reset">RESET</string>
    <string name="view_detail">View Detail</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="assessment_year">Assessment Year</string>
    <string name="change">Change</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="sale">Sale</string>
    <string name="add_sales_services">Add Sales/Services</string>
    <string name="list_sales">List Sales/Services</string>
    <string name="credit_note">Credit Notes(Return)</string>
    <string name="add_debtors">Add Debtor(Customer)</string>
    <string name="purchase">Purchase</string>
    <string name="add_purchase">Add Purchase/Services</string>
    <string name="list_purchase">List Purchase/Services</string>
    <string name="add_creditors">Add Creditors(Supplier)</string>
    <string name="debit_note">Debit Note(Return)</string>
    <string name="item_service">Item/Service</string>
    <string name="add_item">Add Items</string>
    <string name="add_services">Add Service</string>
    <string name="add_category">Add Category</string>
    <string name="manage_unit">Manage Unit</string>
    <string name="manage_brands">Manage Brands</string>
    <string name="stock_converters">Stock Converters</string>
    <string name="manage_tax_classes">Manage Tax</string>
    <string name="bank_cash">Bank/Cash</string>
    <string name="manage_bank">Manage Bank</string>
    <string name="cash_opening">Cash Opening</string>
    <string name="manage_cash">Manage Cash</string>
    <string name="cash_to_bank">Cash To Bank</string>
    <string name="bank_to_cash">Bank To Cash</string>
    <string name="payment">Payment</string>
    <string name="receipt">Receipt</string>
    <string name="category">Category</string>
    <string name="settings">Settings</string>
    <string name="reports">Reports</string>
    <string name="wallet">Wallet</string>
    <string name="perform_invoices">Performa Invoices</string>
    <string name="tax_invoices">Tax Invoices</string>
    <string name="export">Export</string>
    <string name="Import">Import</string>
    <string name="delivery_challan">Deliver Challan</string>
    <string name="rcm">RCM</string>
    <string name="stock_transfer">Stock Transfer</string>
    <string name="fixed_asset">Fixed Asset</string>
    <string name="filter">Filter</string>
    <string name="more">More</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="supplier_invoice_no">Supplier Invoice No.</string>
    <string name="supplier_invoice_date">Supplier Invoice Date</string>
    <string name="reference_no_purchase">Reference no./ PO Order No.</string>
    <string name="scan_copy_sup_bill">Scan Copy Of Supplier Bill*</string>
    <string name="rcm_applicable">RCM Applicable</string>
    <string name="sku_no">SKU No.</string>
    <string name="hsn_code">HSN Code</string>
    <string name="submit">Submit</string>
    <string name="account_type">Select Account Type</string>
    <string name="bank_name">Select Bank Name</string>
    <string name="acc_no">Enter Account No</string>
    <string name="ifsc_code">Enter IFSC Code</string>
    <string name="add_bank_detail">Add Bank Details</string>
    <string name="bank_to_bank">Bank To Bank</string>
    <string name="add_payment_detail">Add Payment Detail</string>
    <string name="add_payment">Add Payment</string>
    <string name="customer_name">Customer Name</string>
    <string name="select_sales_date">Select Sales Date</string>
    <string name="select_status">Select Status</string>
    <string name="Enter_refno">Enter Reference No./ Po Order No.</string>
    <string name="enter_invoice_id">Enter Invoice Id</string>
    <string name="select_pay_type"> Select Payment Type</string>
    <string name="select_shippment_dtail">Select Shipment Detail</string>
    <string name="dispatch_through">Dispatch Through</string>
    <string name="bill_applicable"> E-way Bill Applicable</string>
    <string name="add_money_to_wallet">Add Money To Wallet</string>
    <string name="add_money">Proceed To Add Money</string>
    <string name="sale_report">Sale Report</string>
    <string name="purchase_report">Purchase Report</string>
    <string name="ledger_report"> Ledger Report</string>
    <string name="debitor_report">Debitors Report</string>
    <string name="creditor_report">Creditor Report</string>
    <string name="customer">Customer</string>
    <string name="select_customer">Select Customer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="supplier">Supplier</string>
    <string name="basic_detail">Basic Detail</string>
    <string name="upload_signature">Upload Signature</string>
    <string name="business_name">Business Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_id">Email Id</string>
    <string name="business_address">Business Address</string>
    <string name="business_discription">Business Discription</string>
    <string name="signature">Signature</string>
    <string name="GSTIN">GSTIN</string>
    <string name="State">State</string>
    <string name="business_type">Business Type</string>
    <string name="business_category">Business Category</string>
    <string name="business_detail">Business Detail</string>
    <string name="manage_customer">Manage Customer</string>
    <string name="sale_list">Sale List</string>
    <string name="apply">Apply</string>
    <string name="create_online_store">Create Online Store</string>
    <string name="suggestion">Suggestion</string>
    <string name="rateapp">Rate App</string>
    <string name="ourservice">Our Service</string>
    <string name="ask_query">Ask Query</string>
    <string name="companyprofile">Company Profile</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="whatsapp">Whatsapp</string>
    <string name="how_to_use">How to Use</string>
    <string name="new_buss_reg">New Bussiness Registration</string>
    <string name="acc_return">Accounting and Return Software</string>
    <string name="other_bussiness">Other Bussiness Software</string>
    <string name="go_to_website">Go To Website</string>
    <string name="finance">Finance</string>
    <string name="type">Type</string>
    <string name="category_name">Category name</string>
    <string name="brand_name">Brand name</string>
    <string name="add_brand">Add Brand</string>
    <string name="unit_name">Unit name</string>
    <string name="add_unit">Add Unit</string>
    <string name="add_tax_name">Add Tax Name</string>
    <string name="tax_name">Tax Name</string>
    <string name="tax_percentage">Tax Percentage</string>
    <string name="add_customer">Add Customer</string>
    <string name="purchase_invoice_prefix">Purchase Invoice Prefix</string>
    <string name="purchase_invoice_last_no">Purchase Invoice Last No.</string>
    <string name="purchase_return_invoice_prefix">  Purchase Return Invoice Prefix</string>
    <string name="sales_invoice_prefix"> Sales Invoice Prefix</string>
    <string name="sales_invoice_last_no"> Sales Invoice Last No.</string>
    <string name="sales_return_invoice_prefix"> Sales Return Invoice Prefix</string>
    <string name="sales_performa_invoice_last_no"> Sales Performa Invoice Last No.</string>
    <string name="sales_retail_invoice_last_no"> Sales Retail Invoice Last No.</string>
    <string name="sales_export_invoice_last_no"> Sales Export Invoice Last No.</string>
    <string name="sales_delivery_ch_invoice_last_no">Sales Delivery Chalan Invoice Last No.</string>
    <string name="sales_rcm_invoice_last_no"> Sales RCM Invoice Last No.</string>
    <string name="sales_stock_transfer_invoice_last_no">Sales Stock Transfer Invoice Last No.</string>
    <string name="sales_fixed_asset_invoice_last_no">Sales Fixed Asstes Invoice Last No.</string>
    <string name="use_authorised_sig_image"> Use Authorised Signatory Image on Invoice?</string>
    <string name="authorised_sig_image"> Autorised Signatory Image</string>
    <string name="terms_condition"> Terms and Condtions</string>
    <string name="invoice_footer_text">Invoice Footer Text</string>
    <string name="item_wise_discount"> Item Wise Discount</string>
    <string name="bill_wise_discount">Bill Wise Discount</string>
    <string name="tds_applicable"> Tds Applicable</string>
    <string name="cess_applicable">Cess Applicable</string>
    <string name="eway_bill_applicable">Eway Bill Applicable</string>
    <string name="dispatch_though_applicable">Dispatch Though Applicable</string>
    <string name="dispatch_though_applicable_sale">Dispatch Though Applicable Sale</string>
    <string name="do_you_want_total_out_sale"> Do You want Total Outstaing on Sale Bill</string>
    <string name="do_you_want_notification">Do you want Notification for outsanding amount day By day</string>
    <string name="purchase_return_invoice_last_no">Purchase Return Invoice Last No</string>
    <string name="user_setting">User Setting</string>
    <string name="party_name">Party Name</string>
    <string name="bill_in_no">Bill Invoice No</string>
    <string name="sale_detail">Sale Details</string>
    <string name="sales_date">Sale Date</string>
    <string name="sales_invoice_id">Sale Invoice Id</string>
    <string name="sale_status">Sale Status</string>
    <string name="reference_no">Reference No</string>
    <string name="total">Total</string>
    <string name="paid">Paid</string>
    <string name="due">Due</string>
    <string name="payment_status">Payment Status</string>
    <string name="share">Share</string>
    <string name="action">Action</string>
    <string name="purchase_invoice_id">Purchase Invoice Id</string>
    <string name="purchase_status">Purchase Status</string>
    <string name="purchase_detail">Purchase Detail</string>
    <string name="select_supplier">Select Supplier</string>
    <string name="tax_amount">Tax Amount</string>
    <string name="other_chargers">Other Charges</string>
    <string name="shipping_charges">Shipping Charges</string>
    <string name="subtotal">Sub Total</string>
    <string name="discount">Discount</string>
    <string name="different_shipping_detail">Different Shipping detail</string>
    <string name="perform_to_tax">Performa To tax</string>
    <string name="invoice_discount">Invoice Discount</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="select_bussiness_type">Select Bussiness Type</string>
    <string name="select_nature_business">Select Nature Of Bussiness</string>
    <string name="amount_due">Amount Due</string>
    <string name="credit_date"> Credit Date</string>
    <string name="due_date">Due Date</string>
    <string name="select_tds_app">Select Tds Application</string>
    <string name="credit_time">Credit Time</string>
    <string name="register_no">Registration_no</string>
    <string name="regis_date">Registration Date</string>
    <string name="item_list">Item List</string>
    <string name="item_name">Item Name</string>
    <string name="item_unit">Item Unit</string>
    <string name="select_setting">Select  Setting</string>
    <string name="print_setting">Print Setting</string>
</resources>