<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_outline_dashboard_24"/>
    <item
        android:id="@+id/sale"
        android:title="@string/sale"
        android:icon="@drawable/ic_outline_shopping_cart_24"/>
    <item
        android:id="@+id/purchase"
        android:title="@string/purchase"
        android:icon="@drawable/ic_outline_add_shopping_cart_24"/>
    <item
        android:id="@+id/customer"
        android:title="@string/customer"
        android:icon="@drawable/ic_outline_shopping_cart_24"/>
    <item
        android:id="@+id/supplier"
        android:title="@string/supplier"
        android:icon="@drawable/ic_outline_add_shopping_cart_24"/>
    <item
        android:id="@+id/item"
        android:title="@string/item_service"
        android:icon="@drawable/ic_outline_card_giftcard_24"/>
    <item
        android:id="@+id/bank"
        android:title="@string/bank_cash"
        android:icon="@drawable/ic_outline_account_balance_24"/>
    <item
        android:id="@+id/payment"
        android:title="@string/payment"
        android:icon="@drawable/ic_outline_money_24"/>
    <item
        android:id="@+id/receipt"
        android:title="@string/receipt"
        android:icon="@drawable/ic_outline_receipt_24"/>
    <item
        android:id="@+id/category"
        android:title="@string/category"
        android:icon="@drawable/ic_outline_category_24"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_outline_settings_24"/>
    <item
        android:id="@+id/reports"
        android:title="@string/reports"
        android:icon="@drawable/ic_outline_assignment_24"/>
    <item
        android:id="@+id/wallet"
        android:title="@string/wallet"
        android:icon="@drawable/ic_outline_account_balance_wallet_24"/>
    <item
        android:id="@+id/CampanyProfile"
        android:title="@string/companyprofile"
        android:icon="@drawable/ic_outline_assignment_24"/>
    <item
        android:id="@+id/askQuery"
        android:title="@string/ask_query"
        android:icon="@drawable/ic_outline_account_balance_wallet_24"/>
    <item
        android:id="@+id/ourService"
        android:title="@string/ourservice"
        android:icon="@drawable/ic_outline_assignment_24"/>
    <item
        android:id="@+id/rateApp"
        android:title="@string/rateapp"
        android:icon="@drawable/ic_outline_account_balance_wallet_24"/>
    <item
        android:id="@+id/suggestion"
        android:title="@string/suggestion"
        android:icon="@drawable/ic_outline_account_balance_wallet_24"/>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_outline_power_settings_new_24"/>
</menu>