<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center|left">

        <TextView
            android:id="@+id/perform_invoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perform_invoices"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/tax_invoices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tax_invoices"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/Import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Import"
            android:visibility="gone"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export"
            android:visibility="gone"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/delivery_challan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_challan"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/rcm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rcm"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/stock_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_transfer"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/fixed_asset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixed_asset"
            android:layout_margin="10dp"/>
    </LinearLayout>

</RelativeLayout>