<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center|left">

        <TextView
            android:id="@+id/sale_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale_report"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/purchase_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase_report"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/ledger_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ledger_report"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/debitor_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debitor_report"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/creditor_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creditor_report"
            android:layout_margin="10dp"/>
    </LinearLayout>

</RelativeLayout>