<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.Sale.AddSalesA">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.PopupOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStart="0dp"
            android:background="@drawable/gradient_white"
            app:popupTheme="@style/AppTheme.AppBarOverlay">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_baseline_arrow_back_24" />


                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/img_back"
                    android:text="@string/add_sales_services"
                    android:textColor="@color/deep_blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_name"

                >
                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:inputType="textPersonName"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:layout_marginRight="15dp"
                    >
                    <EditText
                        android:focusableInTouchMode="false"
                        android:id="@+id/etSaleDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter Sale Date"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/calendar"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:background="@drawable/bg_border_input"
                android:layout_marginTop="@dimen/sp16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:textSize="@dimen/sp16"
                    android:layout_gravity="center_vertical"
                    android:text="@string/select_status"/>
                <Spinner
                    android:id="@+id/spinner_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRefno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reference_no_purchase"
                    android:maxLines="1"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextAddressDeatils"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_invoice_id"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etinvoiceid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:background="@drawable/bg_border_input"
                android:layout_marginTop="@dimen/sp16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:textSize="@dimen/sp16"
                    android:layout_gravity="center_vertical"
                    android:text="@string/select_pay_type"/>
                <Spinner
                    android:id="@+id/spinner_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:background="@drawable/bg_border_input"
                android:layout_marginTop="@dimen/sp16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:textSize="@dimen/sp16"
                    android:layout_gravity="center_vertical"
                    android:text="@string/select_shippment_dtail"/>
                <Spinner
                    android:id="@+id/spinner_shiping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:background="@drawable/bg_border_input"
                android:layout_marginTop="@dimen/sp16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:textSize="@dimen/sp16"
                    android:layout_gravity="center_vertical"
                    android:text="@string/dispatch_through"/>
                <Spinner
                    android:id="@+id/spinner_dispatch_through"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:background="@drawable/bg_border_input"
                android:layout_marginTop="@dimen/sp16"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:textSize="@dimen/sp16"
                    android:layout_gravity="center_vertical"
                    android:text="@string/bill_applicable"/>
                <Spinner
                    android:id="@+id/spinner_bill_applicable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>


            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_red_gradient"
                android:textColor="#fff"
                android:text="next"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>